--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ input {
     justify-content: center;
     animation-name: mostrar;
     animation-duration: 2s;
+    flex-direction: column;
 }
 
 @keyframes mostrar {
@@ -96,4 +97,16 @@ input {
 
 .ocultar {
     display: none;
+}
+
+.fa-x-twitter {
+    color: aliceblue;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    font-size: 30px;
+}
+
+.fa-x-twitter {
+    cursor: pointer;
 }
